--- a/style.css
+++ b/style.css
@@ -391,7 +391,7 @@ h2:after {
     padding: 0 20px;
 
 }
-.map-container h3, h4 {
+.map-container h3,h4 {
     text-align: center;
     margin-bottom: 20px;
     color: #FFA500;
@@ -483,7 +483,7 @@ footer a {
     padding: 15px;
     border-radius: 50%;
     text-decoration: none;
-    display: none;
+    display: block;
     transition: background-color 0.3s;
 }
 
